import "mapreduce/yt/interface/protos/extension.proto";

message TBassLegacyLogRow {
    optional string Content = 1 [(NYT.column_name) = "content"];
    optional string Env = 2 [(NYT.column_name) = "env"];
    optional string ReqId = 3 [(NYT.column_name) = "reqid"];
    optional string Timestamp = 4 [(NYT.column_name) = "timestamp"];
    optional string Type = 5 [(NYT.column_name) = "type"];
    optional string NannyServiceId = 6 [(NYT.column_name) = "nanny_service_id"];
    optional string HypothesisNumber = 7 [(NYT.column_name) = "hypothesis_number"];
};

message TBassLogRow {
    optional bytes Timestamp = 1 [(NYT.column_name) = "Timestamp"];
    optional uint64 Time = 2 [(NYT.column_name) = "Time"];
    optional bytes Type = 3 [(NYT.column_name) = "Type"];
    optional bytes Content = 4 [(NYT.column_name) = "Content"];
    optional bytes Message = 5 [(NYT.column_name) = "Message"];
    optional bytes Json = 6 [(NYT.column_name) = "Json"];
    optional bytes Env = 7 [(NYT.column_name) = "Env"];
    optional bytes NannyServiceId = 8 [(NYT.column_name) = "nanny_service_id"];

    optional bytes ReqId = 10 [(NYT.column_name) = "ReqId"];
    optional bytes Uuid = 11 [(NYT.column_name) = "Uuid"];
    optional bytes ClientId = 12 [(NYT.column_name) = "ClientId"];
    optional bytes DeviceId = 13 [(NYT.column_name) = "DeviceId"];
    optional uint64 SequenceNumber = 14 [(NYT.column_name) = "SequenceNumber"];
    optional bytes HypothesisNumber = 15 [(NYT.column_name) = "HypothesisNumber"];

    optional bytes FormName = 100 [(NYT.column_name) = "FormName"];
    optional bytes Utterance = 101 [(NYT.column_name) = "Utterance"];
    optional bytes ActionName = 103 [(NYT.column_name) = "ActionName"];
};

message TBriefData {
    repeated string SearchRequests = 1;
};

message TBassBriefLogRow {
    optional string StartTimestamp = 1 [(NYT.column_name) = "StartTimestamp"];
    optional uint64 StartTime = 2 [(NYT.column_name) = "StartTime"];
    optional string FinishTimestamp = 3 [(NYT.column_name) = "FinishTimestamp"];
    optional uint64 FinishTime = 4 [(NYT.column_name) = "FinishTime"];
    optional uint64 Duration = 5 [(NYT.column_name) = "Duration"];
    optional string Env = 6 [(NYT.column_name) = "Env"];
    optional string NannyServiceId = 7 [(NYT.column_name) = "nanny_service_id"];

    optional string ReqId = 10 [(NYT.column_name) = "ReqId"];
    optional string Uuid = 11 [(NYT.column_name) = "Uuid"];
    optional string ClientId = 12 [(NYT.column_name) = "ClientId"];
    optional string DeviceId = 13 [(NYT.column_name) = "DeviceId"];
    optional uint64 SequenceNumber = 14 [(NYT.column_name) = "SequenceNumber"];
    optional string HeaderReqId = 15 [(NYT.column_name) = "HeaderReqId"];
    optional string HypothesisNumber = 16 [(NYT.column_name) = "HypothesisNumber"];

    optional string FormName = 100 [(NYT.column_name) = "FormName"];
    optional string ActionName = 103 [(NYT.column_name) = "ActionName"];
    optional string Utterance = 101 [(NYT.column_name) = "Utterance"];

    // One of requests sent to WEB-search while handling the form
    // All requests are stored in Data/SearchRequests
    optional string SearchRequest = 102 [(NYT.column_name) = "SearchRequest"];

    optional uint64 LogMessagesCount = 200 [(NYT.column_name) = "LogMessagesCount"];
    optional uint64 ErrorMessagesCount = 201 [(NYT.column_name) = "ErrorMessagesCount"];

    optional bool HasErrorBlock = 300 [(NYT.column_name) = "HasErrorBlock"];
    optional TBriefData Data = 10000 [(NYT.column_name) = "BriefData"];
};

message TBassErrorStatsRow {
    optional string StartTimestamp = 1 [(NYT.column_name) = "fielddate"];
    optional string FormName = 100 [(NYT.column_name) = "formname"];
    optional string ActionName = 101 [(NYT.column_name) = "actionname"];
    optional uint64 ErrorMessagesCount = 200 [(NYT.column_name) = "errors"];
    optional uint64 LogMessagesCount = 201 [(NYT.column_name) = "logs"];
}

message TBassDurationStatsRow {
    optional string StartTimestamp = 1 [(NYT.column_name) = "StartTimestamp"];
    optional uint64 StartTime = 2 [(NYT.column_name) = "StartTime"];
    optional string FinishTimestamp = 3 [(NYT.column_name) = "FinishTimestamp"];
    optional uint64 FinishTime = 4 [(NYT.column_name) = "FinishTime"];

    optional string ReqId = 10 [(NYT.column_name) = "ReqId"];
    optional string Uuid = 11 [(NYT.column_name) = "Uuid"];

    optional string FormName = 100 [(NYT.column_name) = "FormName"];
    optional bool IsQuasar = 101 [(NYT.column_name) = "IsQuasar"];
    optional string ActionName = 103 [(NYT.column_name) = "ActionName"];

    optional uint64 BassDuration = 200 [(NYT.column_name) = "BassDuration"];
    optional double UniproxyDuration = 201 [(NYT.column_name) = "UniproxyDuration"];
};

message TBassQuantileStatsRow {
    optional string StartTimestamp = 1 [(NYT.column_name) = "fielddate"];
    optional string FormName = 100 [(NYT.column_name) = "formname"];
    optional string FormType = 101 [(NYT.column_name) = "formtype"];

    optional double TF = 200 [(NYT.column_name) = "tf"];
    optional double Percentage = 201 [(NYT.column_name) = "percentage"];

    optional double Quantile_50 = 300 [(NYT.column_name) = "quantile_50"];
    optional double Quantile_75 = 301 [(NYT.column_name) = "quantile_75"];
    optional double Quantile_90 = 302 [(NYT.column_name) = "quantile_90"];
    optional double Quantile_95 = 303 [(NYT.column_name) = "quantile_95"];
    optional double Quantile_99 = 304 [(NYT.column_name) = "quantile_99"];
    optional double Quantile_99_9 = 305 [(NYT.column_name) = "quantile_99_9"];
};

message TBassNogeoLogRow {
    optional string ReqId = 1 [(NYT.column_name) = "ReqId"];
    optional string Utterance = 2 [(NYT.column_name) = "Utterance"];
    optional string Where = 3 [(NYT.column_name) = "Where"];
    optional string Message = 4 [(NYT.column_name) = "Message"];
}

message TBassNogeoStatLogRow {
    optional string Where = 1 [(NYT.column_name) = "Where"];
    optional uint64 Count = 2 [(NYT.column_name) = "Count"];
    optional string TopUtterance = 3 [(NYT.column_name) = "TopUtterance"];
}

message TBassUniproxyLogRow {
    optional string ReqId = 1 [(NYT.column_name) = "ReqId"];
    optional string EventId = 2 [(NYT.column_name) = "EventId"];
    optional string Timestamp  = 3 [(NYT.column_name) = "Timestamp"];

    optional double Duration = 4  [(NYT.column_name) = "Duration"];
}

